# os9libs

./: CMakeLists.txt  README.md  build.sh
OpenGL/: OpenGL.sit
SDL1.2/: SDL.sit
examples/: triangle.c  triangle.h
include/: GL_gl.h  GL_glext.h  GL_glut.h  agl.h  aglContext.h  aglMacro.h  aglRenderers.h  close_code.h  gliContext.h  gliDispatch.h  glm.h  glu.h
src/: agl.h  carbon_project  gl.h  glut_8x13.c  glut_9x15.c  glut_bitmap.c  glut_bwidth.c  glut_cindex.c  glut_const.h  glut_cursor.c  glut_device.c  glut_dials.c  glut_dstr.c  glut_event.c  glut_ext.c  glut_fullscrn.c  glut_gamemode.c  glut_get.c  glut_hel10.c  glut_hel12.c  glut_hel18.c  glut_init.c  glut_keyctrl.c  glut_keyup.c  glut_menu.c  glut_modifier.c  glut_mroman.c  glut_overlay.c  glut_roman.c  glut_shapes.c  glut_space.c  glut_stroke.c  glut_swidth.c  glut_tablet.c  glut_teapot.c  glut_tr10.c  glut_tr24.c  glut_util.c  glut_vidresize.c  glut_warp.c  (+5 more)
src/GL/: gl.h
src/MUI/: browser.h  displaylist.h  gizmo.h  hslider.h  mui.h  textlist.h  uicolor.h  vslider.h
